# AI

./: .pdm-python  README.md  _config.yml  current.html  index.html  indexalt.html  package-lock.json  pyproject.toml  test.html  website.html
.github/workflows/: deploy.yml
lovable/: tailwind.config.ts
lovable/src/: index.css
lovable/src/pages/: Contactsalt.tsx
src/: App.tsx
src/components/: Navigation.tsx
src/pages/: Contact.tsx  Demo.tsx  Home.tsx
