[project]
name = "AI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "J4nickH", email = "ha1220@mci4me.at"},
]
dependencies = ["clsx>=0.1.1", "tailwind-merge>=0.3.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
